--- a/Quotify/Base.lproj/Main.storyboard
+++ b/Quotify/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10109" systemVersion="15E39d" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10083"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -19,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Loading quotes..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jIt-Ug-pba">
-                                <rect key="frame" x="20" y="28" width="560" height="532"/>
+                                <rect key="frame" x="20" y="28" width="560" height="342"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -31,24 +32,44 @@
                                     <action selector="nextQuoteButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TIG-ch-giC"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Finding author..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wul-LK-VT1">
+                                <rect key="frame" x="90" y="378" width="420" height="114"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="jIt-Ug-pba" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="4aY-ve-VGK"/>
                             <constraint firstItem="jIt-Ug-pba" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="8py-P9-EeC"/>
-                            <constraint firstItem="8hX-M7-ISE" firstAttribute="top" secondItem="jIt-Ug-pba" secondAttribute="bottom" constant="2" id="DTM-7q-t8u"/>
                             <constraint firstItem="8hX-M7-ISE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JFQ-g1-0q3"/>
+                            <constraint firstItem="8hX-M7-ISE" firstAttribute="top" secondItem="wul-LK-VT1" secondAttribute="bottom" constant="70" id="KDY-Dr-pvc"/>
+                            <constraint firstItem="wul-LK-VT1" firstAttribute="top" secondItem="jIt-Ug-pba" secondAttribute="bottom" constant="8" id="Re2-d3-ROr"/>
+                            <constraint firstItem="wul-LK-VT1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bfn-3Y-tSp"/>
+                            <constraint firstItem="wul-LK-VT1" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="fRm-Fw-cge"/>
+                            <constraint firstItem="jIt-Ug-pba" firstAttribute="height" secondItem="wul-LK-VT1" secondAttribute="height" multiplier="3" id="i0c-la-DFo"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8hX-M7-ISE" secondAttribute="bottom" constant="8" id="jC2-Hv-kO9"/>
                             <constraint firstItem="jIt-Ug-pba" firstAttribute="leading" secondItem="8hX-M7-ISE" secondAttribute="trailing" constant="-371" id="nqA-re-SLA"/>
                             <constraint firstItem="jIt-Ug-pba" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="uj0-kq-ipu"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="2hD-14-Iib" appends="YES" id="f1i-ws-hDy"/>
+                        </connections>
                     </view>
                     <connections>
+                        <outlet property="authorTextView" destination="wul-LK-VT1" id="vx1-c2-Ku0"/>
                         <outlet property="nextButton" destination="8hX-M7-ISE" id="07m-ak-vYh"/>
                         <outlet property="quoteTextView" destination="jIt-Ug-pba" id="KDT-D2-4To"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="2hD-14-Iib">
+                    <connections>
+                        <action selector="swipeNext:" destination="BYZ-38-t0r" id="rTr-7R-ezg"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="305" y="387"/>
         </scene>
